tyedigital_backend-dev/yaml/PROD/prodMysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-tyedigital-mysql
  labels:
    app: prod-tyedigital-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-tyedigital-mysql
  template:
    metadata:
      labels:
        app: prod-tyedigital-mysql
    spec:
      containers:
        - name: prod-tyedigital-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: prod-tyedigital-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prod-tyedigital-mysql
spec:
  selector:
    app: prod-tyedigital-mysql
  type: NodePort
  ports:
    - nodePort: 31347
      port: 3306
      targetPort: 3306
