tyedigital_backend-dev/yaml/PROD/prodPhpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-tyedigital-phpmyadmin
spec:
  selector:
    matchLabels:
      app: prod-tyedigital-phpmyadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: prod-tyedigital-phpmyadmin
    spec:
      containers:
        - name: prod-tyedigital-phpmyadmin
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
              name: phpmyadmin
---
apiVersion: v1
kind: Service
metadata:
  name: prod-tyedigital-phpmyadmin
spec:
  selector:
    app: prod-tyedigital-phpmyadmin
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
