tyedigital_backend-dev/yaml/PROD/prodIngressMeatAndMld.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyedigital-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - tyedigital.org
    secretName: tyedigital.org-tls
  rules:
  - host: tyedigital.org
    http:
      paths:
        - path: /api/(.*)
          pathType: Prefix
          backend:
            service:
              name: prod-tyedigital-server
              port:
                number: 6060
        - path: /phpmyadmin/(.*)
          pathType: Prefix
          backend:
            service:
              name: prod-tyedigital-phpmyadmin
              port:
                number: 80
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: webgl-prod
              port:
                number: 80
